Changelog
=========

1.5.5 (unreleased)
------------------

- Use new deletions API to clean up VM deletions on puppetmaster.

- Fix bogus ProcessLookupError except clause.


1.5.4 (2014-12-12)
------------------

- Fix bug which caused disk grow to fail during the first attempt (#13930).
- Improve iptables reloading (#13879).


1.5.3 (2014-11-22)
------------------

- Refactored resize2fs disk grow code (#13414).
- Delete expired snapshots which adhere to the '*-keep-until-*' naming
  convention (#13414).
- Remove old KVM configure code. The code lives now in the fc.qemu package
  (#13414).


1.5.2 (2014-10-01)
------------------

- Revive localconfig-resize2fs-root: this is not obsolete but necessary for
  disk grow.

- Exclude users from duplicate contact detection in case they have no email
  address.


1.5.1 (2014-10-01)
------------------

- Ensure we do not block restarts of VMs when the directory is not up.

- Ensure we screen directory exceptions when generating Nagios contacts.

- Remove old, unused, and broken KVM entry points.

- Avoid duplicates when creating technical contacts. (#13629)

- Explain how to run tests in HACKING.txt.


1.5.0 (2014-09-13)
------------------

- Integate new fc.qemu package instead of instrumenting a complicated
  init script.

- Restart firewall in case of changed config files.


1.4.1 (2014-09-09)
------------------

- Let Nagios configure contacts for technical contacts of resource groups, too.


1.4.0 (2014-08-22)
------------------

- Clean outdated RBD snapshots (#13414).


1.3.6 (2014-08-21)
------------------

- Bugfix: the actual config file we pass to qemu is the shell-expanded one in
  /run/kvm.*.cfg. The last refactoring accidentally pointed it to the template
  in /etc/kvm/.


1.3.5 (2014-08-21)
------------------

* Do not try to inmigrate VMs that should be running and *are* running already.

* Adapt test setup to py.test after moving to separate repository and
  get all tests green.
