@@ -95,6 +95,19 @@ def update_configs():
     return exit_code
 
 
+def delete_configs():
+    directory = gocept.net.directory.Directory()
+
+    with gocept.net.directory.exceptions_screened():
+            deletions = directory.deletions('vm')
+
+    for name, node in deletions.items():
+        if 'hard' in node['stages']:
+            cfg = VM.configfile.format(root=VM.root, name=name)
+            if os.path.exists(cfg):
+                os.unlink(cfg)
+
+
 def ensure_vms():
     exit_code = 0
     try:
@@ -109,5 +122,10 @@ def ensure_vms():
             call('fc-qemu', 'ensure', vm)
         except Exception:
             exit_code = 1
+
+    # Normally VMs should have been shut down already when we delete the config
+    # but doing this last also gives a chance this still happening right
+    # before.
+    delete_configs()
 
     sys.exit(exit_code)
